--- a/react/public/index.html
+++ b/react/public/index.html
@@ -29,8 +29,16 @@
     <link href="../src/Login%20-%20Dropbox_files/scooter-scoped-vfl8iXN08.css" type="text/css" rel="stylesheet">
     <link href="../src/Login%20-%20Dropbox_files/web_sprites-vflv2MHAO.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!--<script> $('#mymodal').on('shown.bs.modal', function () {-->
+    <!--$('#myInput').trigger('focus')-->
+    <!--})</script>-->
+
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -46,7 +54,27 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
+    <div id="root">
+      <!--<div className="modal" tabindex="-1" role="dialog">-->
+        <!--<div className="modal-dialog" role="document">-->
+          <!--<div className="modal-content">-->
+            <!--<div className="modal-header">-->
+              <!--<h5 className="modal-title">Modal title</h5>-->
+              <!--<button type="button" className="close" data-dismiss="modal" aria-label="Close">-->
+                <!--<span aria-hidden="true">&times;</span>-->
+              <!--</button>-->
+            <!--</div>-->
+            <!--<div className="modal-body">-->
+              <!--<p>Modal body text goes here.</p>-->
+            <!--</div>-->
+            <!--<div className="modal-footer">-->
+              <!--<button type="button" className="btn btn-primary">Save changes</button>-->
+              <!--<button type="button" className="btn btn-secondary" data-dismiss="modal">Close</button>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
